// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IIFE (1) 1`] = `
"(function () {})();
"
`;

exports[`IIFE (2) 1`] = `
"(() => {})();
"
`;

exports[`anonymous function expression 1`] = `
"(function () {});
"
`;

exports[`arrow function expression (1) 1`] = `
"const sum = (a, b) => {
  return a + b;
};
"
`;

exports[`arrow function expression (2) 1`] = `
"const foo = () => {};
"
`;

exports[`arrow function that returns object literal (1) 1`] = `
"const foo = () => ({});
"
`;

exports[`arrow function that returns object literal (2) 1`] = `
"const foo = () => ({ foo: "bar" });
"
`;

exports[`arrow function that returns object literal (3) 1`] = `
"const foo = () => ({
  foo: "bar",
  baz,
});
"
`;

exports[`function declaration (1) 1`] = `
"function sum(a, b) {
  return a + b;
}
"
`;

exports[`function declaration (2) 1`] = `
"function foo() {}
"
`;

exports[`function expression (1) 1`] = `
"const sum = function (a, b) {
  return a + b;
};
"
`;

exports[`function expression (2) 1`] = `
"const foo = function () {};
"
`;

exports[`function that returns object literal (1) 1`] = `
"function foo() {
  return {};
}
"
`;

exports[`function that returns object literal (2) 1`] = `
"function foo() {
  return { foo: "bar" };
}
"
`;

exports[`function that returns object literal (3) 1`] = `
"function foo() {
  return {
    foo: "bar",
    baz,
  };
}
"
`;

exports[`object literal parameter (1) 1`] = `
"foo({
  bar,
  baz: "baz",
});
"
`;

exports[`object literal parameter (2) 1`] = `
"foo(bar, {
  baz: "baz",
});
"
`;

exports[`object literal parameter (3) 1`] = `
"foo(
  { bar: "bar" },
  {
    baz: "baz",
  },
);
"
`;

exports[`promise chain 1`] = `
"myPromise
  .then((value) => {
    console.log(value);
  })
  .catch((err) => {
    console.error(err);
  });
"
`;
